Fix the recharts data issue and alignment issue:

--- a/src/App.css
+++ b/src/App.css
@@ -3,26 +3,19 @@
   font-family: "Verdana", sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .container {
-  display: flex;
-  align-items: flex-start;
-  justify-content: space-between;
-  margin-right: auto;
 }
 
-.tdProps {
-  color:#0000ff
+.child {
+  display: flex;
+  border: 1px solid black;
+  align-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  justify-content: left;
+  margin-right: auto;
+  margin: 0 -4px -4px 0;
+  padding: 0;
 }
 
 .customDropdown {
@@ -35,37 +28,13 @@
   font-size: small;
 }
 
-.item {
-  margin: 0px;
-}
-
 
 .bigFont {
   justify-content: flex-start;
   font-size: large;
 }
-      
 
-.App-header {
-  display: flex;
-  align-content: space-around;
-  padding: 0;
-  flex-wrap: wrap;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+td.subject {
+  width: 20%
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
